@@ -5,9 +5,11 @@ import lombok.Getter;
 import lombok.NoArgsConstructor;
 import lombok.Setter;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 
 @Entity
@@ -15,68 +17,53 @@ import java.util.List;
 @Setter
 @NoArgsConstructor
 public class User implements UserDetails {
+
     @Id
-    @GeneratedValue
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
     private Long userID;
+
     private String password;
     private String email;
     private boolean enabled;
-    private  Role role  ;
+
+    @Enumerated(EnumType.STRING)
+    private Role role;
+
     @OneToOne(cascade = CascadeType.ALL)
     @JoinColumn(name = "profile_pic_id")  // Foreign key column in User table
     private ProfilePic profilePic;
 
-    /**
-     * @return
-     */
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of();
+        // Convert the Role enum to a SimpleGrantedAuthority
+        return Collections.singletonList(new SimpleGrantedAuthority(role.name()));
     }
 
-    /**
-     * @return
-     */
     @Override
     public String getPassword() {
         return this.password;
     }
 
-    /**
-     * @return
-     */
     @Override
     public String getUsername() {
         return this.email;
     }
 
-    /**
-     * @return
-     */
     @Override
     public boolean isAccountNonExpired() {
         return UserDetails.super.isAccountNonExpired();
     }
 
-    /**
-     * @return
-     */
     @Override
     public boolean isAccountNonLocked() {
         return UserDetails.super.isAccountNonLocked();
     }
 
-    /**
-     * @return
-     */
     @Override
     public boolean isCredentialsNonExpired() {
         return UserDetails.super.isCredentialsNonExpired();
     }
 
-    /**
-     * @return
-     */
     @Override
     public boolean isEnabled() {
         return this.enabled;
